# Durian

./: PKGBUILD  README.md  biome.json  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: backend.yml  build.yml  frontend.yml
examples/plugins/: AutoDeafen.js  WebGL_Test.js  WelcomeToDorion.js
src/: index.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/injection/: global.d.ts  postinject.ts  preinject.ts  tsconfig.json  types.d.ts
src-tauri/injection/shared/: plugins.ts  recreate.ts  ui.ts  util.ts  window.ts
src-tauri/src/: config.rs  deep_link.rs  main.rs  profiles.rs  release.rs
src-tauri/src/functionality/: cache.rs  hotkeys.rs  rpc.rs  streamer_mode.rs  tray.rs  window.rs
src-tauri/src/injection/: client_mod.rs  injection_runner.rs  local_html.rs  plugin.rs  theme.rs
src-tauri/src/processors/: css_preprocess.rs  js_preprocess.rs
src-tauri/src/util/: helpers.rs  logger.rs  mod.rs  notifications.rs  paths.rs  process.rs  window_helpers.rs
src-tauri/src/window/: blur.rs
updater/: Cargo.toml
