[package]
name = "dorion"
version = "5.0.0"
description = "Tiny alternative Discord client with a smaller footprint, themes and plugins, multi-profile, and more!"
authors = ["SpikeHD"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"
lto = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
async-recursion = "1.1.0"
include-flate = "0.3.0"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tray-icon = "0.13.4"
tauri = { version = "2.0.0-beta", features = ["tray-icon", "macos-private-api", "image-ico", "image-png", "tracing", "webview-data-url"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
dirs = "5.0.1"
base64 = "0.22.0"
phf = "0.11.2"
regex = "1.10.4"

# For push to talk (and maybe other hotkeys in the future!)
device_query = "2.0.0"
sysinfo = "0.30.11"

# launch on startup
auto-launch = "0.5.0"

# rpc server
rsrpc = { git = "https://www.github.com/CDzungx/rsRPC_Next", branch = "main" }
window_titles = { git = "https://github.com/CDzungx/window_titles_next", branch = "master" }

# window blur
window-vibrancy = "0.5.0"
chrono = "0.4.38"

tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-cors-fetch = "2.1.1"


[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
webkit2gtk = "2.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1.1"
cocoa = "0.25.0"
block = "0.1.6"
embed_plist = "1.2.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.29.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_UI_Shell",
]

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
